--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "homepage": "https://github.com/painterdrown/yingyingying#readme",
   "dependencies": {
     "github-markdown-css": "^2.10.0",
-    "markdown-it": "^8.4.2"
+    "markdown-it": "^8.4.2",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
+    "markdown-it-toc-and-anchor": "^4.1.2"
   }
 }
